# Rift

./: .gitattributes  .gitignore  Cargo.toml  README.md  help.txt  install.ps1  out.txt  out3.txt  out4.txt  package-lock.json  stdout.txt
.github/workflows/: build.yml  release.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: main.rs
src/analysis/: claws.rs  markdown.rs  mod.rs  parser.rs  sexp.rs  walker.rs
src/commands/: analyze.rs  hatch.rs  interactive.rs  mod.rs
src/llm/: downloader.rs  gpu_detect.rs  mod.rs  runner.rs
src/pet/: identity.rs  mod.rs  storage.rs
src/tui/: mod.rs  output.rs  spinner.rs
